tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0222/input.js
function hello() { "octal directive\1"; "octal directive\2"; "use strict"; }
